# drumkraken

./: .gitmodules  CMakeLists.txt  readme.md
src/: main.cpp  resources.cpp  resources.h
src/common/: Game.cpp  Game.h  Scene.cpp  Scene.h
src/scene/: ChartScene.cpp  ChartScene.h  InitScene.cpp  InitScene.h
